Rename excerpts for consistency across models and languages

--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -24,35 +24,10 @@ bedrock-runtime_Hello:
   services:
     bedrock-runtime: {InvokeModel}
 
-bedrock-runtime_Scenario_CliTextPlayground:
-  title: An interactive text generation playground for &BR;
-  title_abbrev: Interactive text playground
-  synopsis: "how to prepare and send a prompt to the following large-language models (LLMs) on &BR;:"
-  synopsis_list:
-    - "AI21 Labs: Jurassic2 Mid and Ultra"
-    - "Amazon: Titan Text G1 Lite and Express"
-    - "Anthropic: Claude Instant"
-    - "Anthropic: Claude 2.0 and 2.1"
-    - "Anthropic: Claude 3 Haiku and Sonnet"
-    - "Meta: Llama2 Chat 13B and 70B"
-    - "Mistral AI: Mistral 7B and Mixtral 8x7B"
-  category: Scenarios
-  languages:
-    JavaScript:
-      versions:
-        - sdk_version: 3
-          github: javascriptv3/example_code/bedrock-runtime
-          excerpts:
-            - description:
-              snippet_files:
-                - javascriptv3/example_code/bedrock-runtime/scenarios/cli_text_playground.js
-  services:
-    bedrock-runtime: {InvokeModel}
-
 bedrock-runtime_InvokeAmazonTitanImageGeneratorForImageGeneration:
-  title: Invoke the Amazon Titan Image Generator G1 model on &BR; for image generation
-  title_abbrev: Image generation with Amazon Titan Image Generator G1
-  synopsis: invoke the Amazon Titan Image Generator G1 model on &BR; for image generation.
+  title: Invoke Amazon Titan Image G1 on &BR; to generate an image
+  title_abbrev: "Amazon Titan: Image generation"
+  synopsis: invoke Amazon Titan Image G1 on &BR; to generate an image.
   category:
   languages:
     Java:
@@ -102,10 +77,10 @@ bedrock-runtime_InvokeAmazonTitanImageGeneratorForImageGeneration:
   services:
     bedrock-runtime: {InvokeModel}
 
-bedrock-runtime_InvokeAmazonTitanImageGeneratorForTextGeneration:
-  title: Invoke the Amazon Titan Text G1 model on &BR; for text generation
-  title_abbrev: Text generation with Amazon Titan Text G1
-  synopsis: invoke the Amazon Titan Text G1 model on &BR; for text generation.
+bedrock-runtime_InvokeAmazonTitanForTextGeneration:
+  title: Invoke Amazon Titan Text G1 on &BR; for text generation
+  title_abbrev: "Amazon Titan: Text generation"
+  synopsis: invoke Amazon Titan Text G1 on &BR; for text generation.
   category:
   languages:
     JavaScript:
@@ -129,9 +104,9 @@ bedrock-runtime_InvokeAmazonTitanImageGeneratorForTextGeneration:
     bedrock-runtime: {InvokeModel}
 
 bedrock-runtime_InvokeStableDiffusionForImageGeneration:
-  title: Invoke the Stability.ai Stable Diffusion XL model on &BR; for image generation
-  title_abbrev: Image generation with Stability.ai Stable Diffusion XL
-  synopsis: invoke the Stability.ai Stable Diffusion XL model on &BR; for image generation.
+  title: Invoke Stability.ai Stable Diffusion XL  on &BR; to generate an image
+  title_abbrev: "Stable Diffusion: Image generation"
+  synopsis: invoke Stability.ai Stable Diffusion XL  on &BR; to generate an image.
   category:
   languages:
     Java:
@@ -186,7 +161,7 @@ bedrock-runtime_InvokeStableDiffusionForImageGeneration:
 
 bedrock-runtime_InvokeMistral7B:
   title: Invoke the Mistral 7B model on &BR; for text generation
-  title_abbrev: Text generation with Mistral 7B
+  title_abbrev: "Mistral AI: Text generation with Mistral 7B Instruct"
   synopsis: invoke the Mistral 7B model model on &BR; for text generation.
   languages:
     Java:
@@ -230,7 +205,7 @@ bedrock-runtime_InvokeMistral7B:
 
 bedrock-runtime_InvokeMixtral8x7B:
   title: Invoke the Mixtral 8x7B model on &BR; for text generation
-  title_abbrev: Text generation with Mixtral 8x7B
+  title_abbrev: "Mistral AI: Text generation with Mixtral 8x7B Instruct"
   synopsis: invoke the Mixtral 8x7B model model on &BR; for text generation.
   languages:
     Java:
@@ -274,7 +249,7 @@ bedrock-runtime_InvokeMixtral8x7B:
 
 bedrock-runtime_InvokeClaudeInstant:
   title: Invoke the Anthropic Claude Instant model on &BR; for text generation
-  title_abbrev: Text generation with Anthropic Claude Instant
+  title_abbrev: "Anthropic Claude Instant: Text generation"
   synopsis: invoke the Anthropic Claude Instant model on &BR; for text generation.
   languages:
     JavaScript:
@@ -289,9 +264,9 @@ bedrock-runtime_InvokeClaudeInstant:
     bedrock-runtime: {InvokeModel}
 
 bedrock-runtime_InvokeClaude2x:
-  title: Invoke the Anthropic Claude 2 model on &BR; for text generation
-  title_abbrev: Text generation with Anthropic Claude 2
-  synopsis: invoke the Anthropic Claude 2 model on &BR; for text generation.
+  title: Invoke Anthropic Claude 2.x on &BR; for text generation
+  title_abbrev: "Anthropic Claude 2: Text generation"
+  synopsis: invoke the Anthropic Claude 2.x on &BR; for text generation.
   languages:
     Go:
       versions:
@@ -306,12 +281,12 @@ bedrock-runtime_InvokeClaude2x:
         - sdk_version: 2
           github: javav2/example_code/bedrock-runtime
           excerpts:
-            - description: Asynchronously invoke the Anthropic Claude 2 foundation model to generate text.
-              snippet_tags:
-                - bedrock-runtime.java2.invoke_claude_async.main
-            - description: Invoke the Anthropic Claude 2 foundation model to generate text.
+            - description: Invoke Claude 2.x using the synchronous client (scroll down for an async example).
               snippet_tags:
                 - bedrock-runtime.java2.invoke_claude.main
+            - description: Invoke Claude 2.x using the asynchronous client.
+              snippet_tags:
+                - bedrock-runtime.java2.invoke_claude_async.main
     JavaScript:
       versions:
         - sdk_version: 3
@@ -361,7 +336,7 @@ bedrock-runtime_InvokeClaude2x:
 
 bedrock-runtime_Claude3_Text:
   title: Invoke Anthropic Claude 3 on &BR; to generate text
-  title_abbrev: Text generation with Anthropic Claude 3
+  title_abbrev: "Anthropic Claude 3: Text generation"
   synopsis: invoke Anthropic Claude 3 on &BR; to generate text.
   languages:
     Python:
@@ -385,7 +360,7 @@ bedrock-runtime_Claude3_Text:
 
 bedrock-runtime_Claude3_Multimodal:
   title: Invoke Anthropic Claude 3 on &BR; with a multimodal prompt
-  title_abbrev: Multimodal image analysis with Anthropic Claude 3
+  title_abbrev: "Anthropic Claude 3: Multimodal invocation"
   synopsis: invoke Anthropic Claude 3 on &BR; with a multimodal prompt.
   languages:
     Python:
@@ -399,9 +374,80 @@ bedrock-runtime_Claude3_Multimodal:
   services:
     bedrock-runtime: {InvokeModel}
 
+bedrock-runtime_InvokeClaude2WithResponseStream:
+  title: Invoke Anthropic Claude 2.x on &BR; and process the response stream in real-time
+  title_abbrev: "Anthropic Claude 2: Real-time response stream processing"
+  synopsis: invoke Anthropic Claude 2.x on &BR; and process the response stream in real-time.
+  category:
+  languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/bedrock-runtime
+          excerpts:
+            - description: Invoke Anthropic Claude and process the response stream.
+              snippet_tags:
+                - gov2.bedrock-runtime.InvokeModelWithResponseStream
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/bedrock-runtime
+          excerpts:
+            - description: Use Claude's Messages API to generate text, then process the response stream in real-time.
+              snippet_tags:
+                - bedrock-runtime.java2.invoke_claude2_with_response_stream_messages_api.main
+            - description: Use Claude's Text Completions API to generate text, then process the response stream in real-time.
+              snippet_tags:
+                - bedrock-runtime.java2.invoke_claude2_with_response_stream_text_api.main
+
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke Anthropic Claude and process the response stream.
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/models/anthropic_claude/claude_3.js
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke Anthropic Claude and process the response stream.
+              snippet_tags:
+                - python.example_code.bedrock-runtime.InvokeModelWithResponseStream
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/Bedrock-runtime
+          sdkguide:
+          excerpts:
+            - description: Asynchronously invoke Anthropic Claude and process the response stream.
+              snippet_tags:
+                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.ClaudeWithResponseStream
+  services:
+    bedrock-runtime: {InvokeModelWithResponseStream}
+
+bedrock-runtime_InvokeCalude3WithResponseStream:
+  title: Invoke Anthropic Claude 3 on &BR; and process the response stream in real-time
+  title_abbrev: "Anthropic Claude 2: Real-time response stream processing"
+  synopsis: invoke Anthropic Claude 3 on &BR; and process the response stream in real-time.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke Claude 3 to generate text, then process the response stream in real-time.
+              snippet_tags:
+                - bedrock-runtime.java2.invoke_claude3_with_response_stream.main
+  services:
+    bedrock-runtime: {InvokeModelWithResponseStream}
+
 bedrock-runtime_InvokeJurassic2:
   title: Invoke the AI21 Labs Jurassic-2 model on &BR; for text generation
-  title_abbrev: Text generation with AI21 Labs Jurassic-2
+  title_abbrev: "AI21 Labs Jurassic-2: Text generation"
   synopsis: invoke the AI21 Labs Jurassic-2 model on &BR; for text generation.
   category:
   languages:
@@ -461,7 +507,7 @@ bedrock-runtime_InvokeJurassic2:
 
 bedrock-runtime_InvokeLlama2:
   title: Invoke the Meta Llama 2 Chat model on &BR; for text generation
-  title_abbrev: Text generation with Meta Llama 2 Chat
+  title_abbrev: "Meta Llama 2: Text generation"
   synopsis: invoke the Meta Llama 2 Chat model on &BR; for text generation.
   category:
   languages:
@@ -519,87 +565,10 @@ bedrock-runtime_InvokeLlama2:
   services:
     bedrock-runtime: {InvokeModel}
 
-bedrock-runtime_InvokeModelWithResponseStream:
-  title: Invoke Anthropic Claude on &BR; for text generation with a response stream
-  title_abbrev: Text generation with Anthropic Claude using a response stream
-  synopsis: invoke Anthropic Claude model on &BR; for text generation with a response stream.
-  category:
-  languages:
-    Go:
-      versions:
-        - sdk_version: 2
-          github: gov2/bedrock-runtime
-          excerpts:
-            - description: Invoke Anthropic Claude and process the response stream.
-              snippet_tags:
-                - gov2.bedrock-runtime.InvokeModelWithResponseStream
-    Java:
-      versions:
-        - sdk_version: 2
-          github: javav2/example_code/bedrock-runtime
-          excerpts:
-            - description: Invoke Anthropic Claude and process the response stream.
-              snippet_tags:
-                - bedrock-runtime.java2.invoke_model_with_response_stream.main
-    JavaScript:
-      versions:
-        - sdk_version: 3
-          github: javascriptv3/example_code/bedrock-runtime
-          excerpts:
-            - description: Invoke Anthropic Claude and process the response stream.
-              snippet_files:
-                - javascriptv3/example_code/bedrock-runtime/models/anthropic_claude/claude_3.js
-    Python:
-      versions:
-        - sdk_version: 3
-          github: python/example_code/bedrock-runtime
-          excerpts:
-            - description: Invoke Anthropic Claude and process the response stream.
-              snippet_tags:
-                - python.example_code.bedrock-runtime.InvokeModelWithResponseStream
-    .NET:
-      versions:
-        - sdk_version: 3
-          github: dotnetv3/Bedrock-runtime
-          sdkguide:
-          excerpts:
-            - description: Asynchronously invoke Anthropic Claude and process the response stream.
-              snippet_tags:
-                - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.ClaudeWithResponseStream
-  services:
-    bedrock-runtime: {InvokeModelWithResponseStream}
-
-bedrock-runtime_Scenario_Invoke_models:
-  title: Invoke multiple large-language models (LLMs) on &BR;
-  title_abbrev: Invoke multiple LLMs on &BR;
-  synopsis: invoke multiple large-language-models (LLMs) on &BR;.
-  synopsis_list:
-    - Generate text with Anthropic Claude.
-    - Generate text with AI21 Labs Jurassic-2.
-    - Generate text with Meta Llama 2 Chat.
-  category: Scenarios
-  languages:
-    PHP:
-      versions:
-        - sdk_version: 3
-          github: php/example_code/bedrock-runtime/
-          excerpts:
-            - description: Invoke multiple LLMs on &BR;.
-              snippet_tags:
-                - php.example_code.bedrock-runtime.basics.scenario
-  services:
-    bedrock-runtime: {InvokeModel}
-
-bedrock-runtime_Scenario_InvokeModelsInclResponseStream:
-  title: Invoke multiple foundation models on &BR;
+bedrock-runtime_Scenario_InvokeModels:
+  title: Invoke various foundation models on &BR;
   title_abbrev: Invoke multiple foundation models on &BR;
-  synopsis: invoke multiple foundation models on &BR;.
-  synopsis_list:
-    - Generate text with Anthropic Claude.
-    - Generate text with AI21 Labs Jurassic-2.
-    - Generate text with Meta Llama 2 Chat.
-    - Asynchronously process the response stream from Anthropic Claude.
-    - Generate an image with the Amazon Titan Image Generator.
+  synopsis: prepare and send a prompt to a variety of large-language models (LLMs) on &BR;
   category: Scenarios
   languages:
     Go:
@@ -610,5 +579,29 @@ bedrock-runtime_Scenario_InvokeModelsInclResponseStream:
             - description: Invoke multiple foundation models on &BR;.
               snippet_tags:
                 - gov2.bedrock-runtime.Scenario_InvokeModels
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke multiple foundation models on &BR;.
+              snippet_tags:
+                - bedrock-runtime.java2.scenario_multiple_models.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description:
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/scenarios/cli_text_playground.js
+    PHP:
+      versions:
+        - sdk_version: 3
+          github: php/example_code/bedrock-runtime/
+          excerpts:
+            - description: Invoke multiple LLMs on &BR;.
+              snippet_tags:
+                - php.example_code.bedrock-runtime.basics.scenario
   services:
     bedrock-runtime: {InvokeModel, InvokeModelWithResponseStream}
