--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -110,7 +110,7 @@ s3_CreateBucket:
     Java:
       versions:
         - sdk_version: 2
-          github: java/usecases/s3_object_lock_scenario
+          github: javav2/example_code/s3
           sdkguide:
           excerpts:
             - description:
