added more tags for the yaml file for S3

--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -966,6 +966,15 @@ s3_GetObjectLegalHoldConfiguration:
   synopsis: get the legal hold configuration of an S3 bucket.
   category:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/s3
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - S3LockWorkflow.javav2.GetObjectLegalHold.main
     .NET:
       versions:
         - sdk_version: 3
@@ -983,6 +992,15 @@ s3_GetObjectLockConfiguration:
   synopsis: get the object lock configuration of an S3 bucket.
   category:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/s3
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - S3LockWorkflow.javav2.GetBucketObjectLockConfiguration.main
     .NET:
       versions:
         - sdk_version: 3
@@ -1000,6 +1018,15 @@ s3_GetObjectRetention:
   synopsis: get the retention configuration of an S3 object.
   category:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/s3
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - S3LockWorkflow.javav2.GetObjectRetention.main
     .NET:
       versions:
         - sdk_version: 3
@@ -2151,6 +2178,15 @@ s3_PutObjectLegalHold:
   synopsis: set the legal hold configuration of an S3 object.
   category:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/s3
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - S3LockWorkflow.javav2.ModifyObjectLegalHold.main
     .NET:
       versions:
         - sdk_version: 3
@@ -2168,6 +2204,15 @@ s3_PutObjectLockConfiguration:
   synopsis: set the object lock configuration of an existing S3 bucket.
   category:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/s3
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - S3LockWorkflow.javav2.EnableObjectLockOnBucket.main
     .NET:
       versions:
         - sdk_version: 3
@@ -2211,6 +2256,15 @@ s3_PutDefaultObjectLockConfiguration:
   synopsis: set the default retention period of an S3 bucket.
   category:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/s3
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - S3LockWorkflow.javav2.ModifyBucketDefaultRetention.main
     .NET:
       versions:
         - sdk_version: 3
