--- a/javav2/example_code/bedrock-runtime/pom.xml
+++ b/javav2/example_code/bedrock-runtime/pom.xml
@@ -56,5 +56,10 @@
             <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.15.1</version>
+        </dependency>
     </dependencies>
 </project>
