JavaScript (v3): Health Imaging - Implement image sets and dataframes workflow.

--- a/javascriptv3/example_code/medical-imaging/package.json
+++ b/javascriptv3/example_code/medical-imaging/package.json
@@ -5,13 +5,16 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@aws-doc-sdk-examples/lib": "^1.0.0",
-    "@aws-sdk/client-medical-imaging": "^3.391.0"
+    "@aws-sdk/client-cloudformation": "3.540.0",
+    "@aws-sdk/client-medical-imaging": "^3.391.0",
+    "@aws-sdk/client-sts": "^3.540.0"
   },
   "scripts": {
+    "test": "vitest run **/*.unit.test.js",
     "integration-test": "vitest run **/*.integration.test.js"
   },
   "type": "module",
   "devDependencies": {
-    "vitest": "^0.25.2"
+    "vitest": "^1.5.0"
   }
 }
