--- a/javascriptv3/package.json
+++ b/javascriptv3/package.json
@@ -47,6 +47,7 @@
     "example_code/libs",
     "example_code/mediaconvert",
     "example_code/medical-imaging",
+    "example_code/medical-imaging/scenarios/health-image-sets/pixel-data-verification",
     "example_code/nodegetstarted",
     "example_code/polly",
     "example_code/redshift",
