--- a/rustv1/examples/ses/Cargo.toml
+++ b/rustv1/examples/ses/Cargo.toml
@@ -9,7 +9,13 @@ edition = "2021"
 
 [dependencies]
 aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
-aws-sdk-sesv2 = { version = "1.3.0" }
+aws-sdk-sesv2 = { version = "1.3.0", features = ["test-util"]}
 tokio = { version = "1.20.1", features = ["full"] }
 clap = { version = "~4.4", features = ["derive"] }
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
+anyhow = "1.0.81"
+tracing = "0.1.40"
+tmpfile = "0.0.2"
+aws-smithy-http = "0.60.7"
+aws-smithy-mocks-experimental = "0.2.0"
+open = "5.1.2"
