--- a/.github/workflows/validate-doc-metadata.yml
+++ b/.github/workflows/validate-doc-metadata.yml
@@ -18,4 +18,4 @@ jobs:
       - name: checkout repo content
         uses: actions/checkout@v4
       - name: validate metadata
-        uses: awsdocs/aws-doc-sdk-examples-tools@2024-02-28-A
+        uses: awsdocs/aws-doc-sdk-examples-tools@5b99d9510e50e47fb515332be7bdb37fbefaea27
