--- a/.github/workflows/validate-doc-metadata.yml
+++ b/.github/workflows/validate-doc-metadata.yml
@@ -18,4 +18,4 @@ jobs:
       - name: checkout repo content
         uses: actions/checkout@v4
       - name: validate metadata
-        uses: awsdocs/aws-doc-sdk-examples-tools@021eea9362ac7269886245560f8171fb76fd785d
+        uses: awsdocs/aws-doc-sdk-examples-tools@2024-04-01-B
