--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -162,7 +162,7 @@ bedrock-runtime_InvokeStableDiffusionForImageGeneration:
 bedrock-runtime_InvokeMistral7B:
   title: Invoke the Mistral 7B model on &BR; for text generation
   title_abbrev: "Mistral AI: Text generation with Mistral 7B Instruct"
-  synopsis: invoke the Mistral 7B model model on &BR; for text generation.
+  synopsis: invoke the Mistral 7B model on &BR; for text generation.
   languages:
     Java:
       versions:
@@ -206,7 +206,7 @@ bedrock-runtime_InvokeMistral7B:
 bedrock-runtime_InvokeMixtral8x7B:
   title: Invoke the Mixtral 8x7B model on &BR; for text generation
   title_abbrev: "Mistral AI: Text generation with Mixtral 8x7B Instruct"
-  synopsis: invoke the Mixtral 8x7B model model on &BR; for text generation.
+  synopsis: invoke the Mixtral 8x7B model on &BR; for text generation.
   languages:
     Java:
       versions:
