--- a/kotlin/usecases/cognito_flutter_mobile_app/linux/CMakeLists.txt
+++ b/kotlin/usecases/cognito_flutter_mobile_app/linux/CMakeLists.txt
@@ -4,10 +4,10 @@ project(runner LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "android_app")
+set(BINARY_NAME "myapp")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "com.example.android_app")
+set(APPLICATION_ID "com.example.myapp")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
