--- a/kotlin/usecases/cognito_flutter_mobile_app/web/manifest.json
+++ b/kotlin/usecases/cognito_flutter_mobile_app/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "android_app",
-    "short_name": "android_app",
+    "name": "myapp",
+    "short_name": "myapp",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
