--- a/kotlin/usecases/cognito_flutter_mobile_app/android/app/src/main/AndroidManifest.xml
+++ b/kotlin/usecases/cognito_flutter_mobile_app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="android-app"
+        android:label="myapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
