--- a/kotlin/usecases/cognito_flutter_mobile_app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/kotlin/usecases/cognito_flutter_mobile_app/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = android_app
+PRODUCT_NAME = myapp
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.androidApp
+PRODUCT_BUNDLE_IDENTIFIER = com.example.myapp
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
