--- a/kotlin/usecases/cognito_flutter_mobile_app/windows/CMakeLists.txt
+++ b/kotlin/usecases/cognito_flutter_mobile_app/windows/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Project-level configuration.
 cmake_minimum_required(VERSION 3.14)
-project(android_app LANGUAGES CXX)
+project(myapp LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "android_app")
+set(BINARY_NAME "myapp")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
